--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^14.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.1.1",
     "@popperjs/core": "^2.10.2",
+    "angular-remix-icon": "^4.1.0",
     "bootstrap": "^5.2.0",
+    "remixicon": "^2.5.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
